--- a/package.json
+++ b/package.json
@@ -25,25 +25,26 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc23",
     "firebase": "^10.6.0",
-    "framer-motion": "^11.0.5",
+    "framer-motion": "^11.0.6",
     "lucide-react": "^0.334.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.58",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
